Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_suspend@basic-s3-without-i915 - fail - Failed assertion: igt_sysfs_set(power_dir, "mem_sleep", mem_sleep_name[sleep])
Starting subtest: basic-s3-without-i915
(i915_suspend:7142) igt_aux-CRITICAL: Test assertion failure function set_mem_sleep, file ../lib/igt_aux.c:882:
(i915_suspend:7142) igt_aux-CRITICAL: Failed assertion: igt_sysfs_set(power_dir, "mem_sleep", mem_sleep_name[sleep])
(i915_suspend:7142) igt_aux-CRITICAL: Last errno: 22, Invalid argument
Subtest basic-s3-without-i915 failed.