lib/igt_aux : Skip SUSPEND_STATE_S3 if mem_sleep deep state is not supported

Forcing s3 by setting mem_sleep to deep fails if s3 is not
supported by platform

Skip the test by checking if s3 is not one of the supported mem_sleep
states

Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/6531
Signed-off-by: Riana Tauro <riana.tauro@intel.com>
Reviewed-by: Anshuman Gupta <anshuman.gupta@intel.com>
Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>